# rendezqueue

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  main.js  package.json
.github/: renovate.json5
.github/workflows/: bazel.yml  pkg_docker.yml  test_bazel.yaml
deploy/nodejson_http/: README.md  compose.yaml
deploy/plain_nodejson/: Dockerfile  README.md  docker-compose.yml
deploy/rendezqueue.com/: BUILD.bazel  Dockerfile  README.md  compose.yaml  entrypoint.sh  nginx_app.conf
pkg/nodejson_http/: Dockerfile  README.md  compose.yaml
pkg/rendezqueue.com/: Dockerfile  README.md  compose.yaml  index.html
proto/: BUILD.bazel  rendezqueue.proto
src/ccgrpc/: BUILD.bazel  README.md  asyncserver.cc  rendezqueue_protobuf_impl.cc  rendezqueue_protobuf_impl.hh  ssl_cred.cc  ssl_cred.hh  swapstore.cc  swapstore.hh  syncclient.cc  syncserver.cc
src/nodejson/: BUILD.bazel  README.md  main.js  rendezqueue_json_impl.js  some_requests.sh  swapstore.js  swapstore_test.js
src/webdual/: BUILD.bazel  README.md  index.html  script.js
test/nodejson/: BUILD.bazel  bytestring_test.js  expect_test.js  swapstore_test.js  tryswap_concat_test.js
test/scenario/: BUILD.bazel  basic.sxpb  ccgrpc_expect.cc  ccgrpc_expect.fildesh  scenario.bzl  scenario.proto
test/stress/: flood_grpc.sh
