module(
    name = "rendezqueue",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "1.16.1")
bazel_dep(name = "aspect_rules_js", version = "1.6.9")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_proto", version = "4.0.0")

bazel_dep(
    name = "abseil-cpp",
    version = "20211102.0",
    repo_name = "com_google_absl")
bazel_dep(
    name = "grpc",
    version = "1.41.0",
    repo_name = "com_github_grpc_grpc")

bazel_dep(
    name = "fildesh",
    version = "0.1.5",
    dev_dependency = True)
bazel_dep(
    name = "rules_sxproto",
    version = "0.0.3",
    dev_dependency = True)
