module(
    name = "rendezqueue",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "1.40.0")
bazel_dep(name = "aspect_rules_js", version = "1.35.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

bazel_dep(
    name = "abseil-cpp",
    version = "20230802.1",
    repo_name = "com_google_absl")
bazel_dep(
    name = "grpc",
    version = "1.48.1.bcr.3",
    repo_name = "com_github_grpc_grpc")

bazel_dep(
    name = "fildesh",
    version = "0.1.9",
    dev_dependency = True)
bazel_dep(
    name = "rules_sxproto",
    version = "0.0.4",
    dev_dependency = True)
git_override(
    module_name = "rules_sxproto",
    remote = "https://github.com/rendezqueue/rules_sxproto.git",
    commit="d711b1ae3caebdad51e4eb0adcf1c47d647e7b51",
)
