module(
    name = "rendezqueue",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.4.1")
bazel_dep(name = "aspect_rules_js", version = "1.37.1")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

bazel_dep(
    name = "abseil-cpp",
    version = "20240116.0",
    repo_name = "com_google_absl")
bazel_dep(
    name = "grpc",
    version = "1.48.1.bcr.3",
    repo_name = "com_github_grpc_grpc")

bazel_dep(
    name = "fildesh",
    version = "0.1.9",
    dev_dependency = True)
git_override(
    module_name = "fildesh",
    remote = "https://github.com/fildesh/fildesh.git",
    commit="f0841991085717aaeca83f09c41cd42ecf4abc34",
)
bazel_dep(
    name = "rules_sxproto",
    version = "0.0.4",
    dev_dependency = True)
git_override(
    module_name = "rules_sxproto",
    remote = "https://github.com/rendezqueue/rules_sxproto.git",
    commit="92ad548bc4a4f08f5fe33eed92a34dd4b5b9e48b",
)
