#load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "rendezqueue_proto",
    srcs = ["rendezqueue.proto"],
)

grpc_proto_library(
    name = "rendezqueue_grpc_proto",
    srcs = ["rendezqueue.proto"],
)

