load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "rendezqueue_proto",
    srcs = ["rendezqueue.proto"],
)

cc_proto_library(
    name = "rendezqueue_cc_proto",
    deps = [":rendezqueue_proto"],
)

cc_grpc_library(
    name = "rendezqueue_cc_grpc",
    srcs = [":rendezqueue_proto"],
    deps = [":rendezqueue_cc_proto"],
    grpc_only = True,
)
