
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

exports_files([
    "swapstore.js",
])

nodejs_binary(
    name = "rendezqueue_nodejson",
    data = [
        ":main.js",
        ":swapstore.js",
    ],
    entry_point = ":main.js",
)

sh_binary(
    name = "some_requests_sh",
    srcs = [
        "some_requests.sh",
    ],
)
