load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

js_binary(
    name = "rendezqueue_nodejson",
    data = [
        ":main.js",
        ":swapstore.js",
    ],
    entry_point = ":main.js",
)

sh_binary(
    name = "some_requests_sh",
    srcs = [
        "some_requests.sh",
    ],
)

# Export for testing.
copy_to_bin(
    name = "swapstore_js",
    srcs = ["swapstore.js"],
    visibility = ["//test/nodejson:__subpackages__"],
)
