load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")

nodejs_test(
    name = "bytestring_test",
    data = [
        "bytestring_test.js",
    ],
    entry_point = "bytestring_test.js",
)

nodejs_test(
    name = "swapstore_test",
    data = [
        "swapstore_test.js",
        "//src/nodejson:swapstore.js",
    ],
    entry_point = "swapstore_test.js",
)

nodejs_test(
    name = "tryswap_concat_test",
    data = [
        "tryswap_concat_test.js",
        "//src/nodejson:swapstore.js",
    ],
    entry_point = "tryswap_concat_test.js",
)
