load("@aspect_rules_js//js:defs.bzl", "js_test")

js_test(
    name = "bytestring_test",
    data = [
        "bytestring_test.js",
    ],
    entry_point = "bytestring_test.js",
)

js_test(
    name = "swapstore_test",
    data = [
        "swapstore_test.js",
        "//src/nodejson:swapstore_js",
    ],
    entry_point = "swapstore_test.js",
)

js_test(
    name = "tryswap_concat_test",
    data = [
        "tryswap_concat_test.js",
        "//src/nodejson:swapstore_js",
    ],
    entry_point = "tryswap_concat_test.js",
)
