load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

js_test(
    name = "bytestring_test",
    data = [
        "bytestring_test.js",
    ],
    entry_point = "bytestring_test.js",
    size = "small",
)

js_test(
    name = "swapstore_test",
    data = [
        "swapstore_test.js",
        "//src/nodejson:swapstore_js",
    ],
    entry_point = "swapstore_test.js",
    size = "small",
)

js_test(
    name = "tryswap_concat_test",
    data = [
        "tryswap_concat_test.js",
        "//src/nodejson:swapstore_js",
    ],
    entry_point = "tryswap_concat_test.js",
    size = "small",
)

copy_to_bin(
    name = "expect_test_js",
    srcs = ["expect_test.js"],
    visibility = ["//test/scenario:__subpackages__"],
)
